tests/NormalTests/paczka1/fuzzy1/68111958.err
Error in line 9: aA0pBQhS S21 24,2
Error in line 7: fos S857 72,7
Error in line 14: FcLoJPIdE1 S857 5,9
Error in line 15: fos S421 90,2
Error in line 23: S857 S21 40,2
Error in line 17: FcLoJPIdE1 S421 98,5
Error in line 24: S857 S767 28,4
Error in line 32: S857 S857 80,0
Error in line 33: S857 S767 60,8
